snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3-sources.jar.sha512
5712a8cb19684a71e5a2c3bfb61174ac28eb549de081ea97ccdc2f502db9251b701ef689e3ba1cab49a8f9098f18af4a5bfae24a551d9279c3ac1f2a0e56ac13